# TaskPilotPro

./: pyproject.toml
todo_project/infoboard/: tasks.py  urls.py  views.py
todo_project/infoboard/mongodb/: connect.py
todo_project/infoboard/templates/infoboard/: base.html  loses_list.html  losses_list.html
todo_project/todo_app/: forms.py  urls.py  views.py
todo_project/todo_app/migrations/: 0001_initial.py
todo_project/todo_app/templates/todo_app/: base.html  create.html  delete.html  list.html  update.html
todo_project/todo_project/: celery.py  settings.py  urls.py
