[tool.poetry]
name = "taskpilotpro"
version = "0.1.0"
description = ""
authors = ["GodVov4 <volume245@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "5.0"
celery = "^5.3.6"
redis = "^5.0.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
